fixed navbar overlapping on Reviews card

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ section:nth-child(even){
     left: 0; 
     right: 0;
     box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1); 
+    z-index: 1;
 }
 
 .header .logo{
